--- a/game1.html
+++ b/game1.html
@@ -5,7 +5,8 @@
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
   <title>FIFA-18</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+    crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
@@ -26,16 +27,17 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-  	<span class="navbar-toggler-icon"></span></button>
+          <span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
               <a id="navtext" class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
-              <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Games
-          </a>
+              <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Games
+              </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="game3.html">Angry Birds</a>
                 <a class="dropdown-item" href="game2.html">Harry Potter</a>
@@ -61,15 +63,11 @@
       </div>
     </nav>
     <br>
-    <div   style="margin-bottom: 2px;margin-top: -13px;">
+    <div style="margin-bottom: 2px;margin-top: -13px;">
       <div class="net">
         <div class="about">
           <h1>A New FIFA-18 Mobile Game</h1>
         </div>
-        <!-- <p class="pg">
-          The 2018 FIFA World Cup™ has arrived to FIFA Mobile! If you’re new to FIFA Mobile, start building and managing your team with Cristiano Ronaldo as the star. Then train any player to superstar status, attack opponents, and keep coming back for daily content
-          all season long. Whether you’re a savvy veteran, just starting out on the pitch, or ready for FIFA World Cup™ competition, FIFA Mobile is your source for soccer.
-        </p> -->
         <br>
         <br>
       </div>
@@ -104,11 +102,11 @@
             </div>
           </div>
           <a class="carousel-control-prev" href="#demo" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </a>
+            <span class="carousel-control-prev-icon"></span>
+          </a>
           <a class="carousel-control-next" href="#demo" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </a>
+            <span class="carousel-control-next-icon"></span>
+          </a>
         </div>
       </div>
 
@@ -116,14 +114,17 @@
         <div class="row" style="margin-bottom: -40px;margin-top: 2px;">
           <div class="col-md-6">
             <h1 class="about">FIFA Soccer Trailer</h1>
-            <iframe width="560 auto" height="315" src="https://www.youtube.com/embed/QV7PK8AVEKA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe width="560 auto" height="315" src="https://www.youtube.com/embed/QV7PK8AVEKA" frameborder="0" allow="autoplay; encrypted-media"
+              allowfullscreen></iframe>
           </div>
           <div class="col-md-6">
             <div class="apple">
               <h1 class="about">FIFA-18 available now on</h1>
               <p align="center">
-                <a href="https://itunes.apple.com/us/app/fifa-soccer-fifa-world-cup/id1094930513?mt=8"><img src="img/apple.jpg" alt="apple"></a>
-                <a href="https://play.google.com/store/apps/details?id=com.ea.gp.fifamobile"><img src="img/google.png" alt="google"></a>
+                <a href="https://itunes.apple.com/us/app/fifa-soccer-fifa-world-cup/id1094930513?mt=8"><img src="img/apple.jpg"
+                    alt="apple"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.ea.gp.fifamobile"><img src="img/google.png"
+                    alt="google"></a>
               </p>
             </div>
           </div>
@@ -134,7 +135,7 @@
         <div class="container-fluid">
           <h1 class="about">Game Features</h1>
           <hr style="width:100%;" class="light">
-<br>
+          <br>
           <div class="row" style="margin-top: -36px;margin-bottom: 223px;">
             <div class="col-md-6" id="img">
               <a href=""><img src="img/fifa5.jpeg" alt="RUSSIA"></a>
@@ -146,7 +147,8 @@
                 <ul class="pg">
                   <li>Play through unique modes and maps</li>
                   <li>Play as any of the 32 qualifying countries, and test your national team</li>
-                  <li>Predict the results of real-world 2018 FIFA World Cup™ matches, and choose correctly to earn rewards</li>
+                  <li>Predict the results of real-world 2018 FIFA World Cup™ matches, and choose correctly to earn
+                    rewards</li>
                 </ul>
               </p>
             </div>
@@ -154,7 +156,7 @@
         </div>
       </div>
       <hr style="width:100%;" class="light">
-<br>
+      <br>
       <div class="container-fluid">
         <div class="row" style="margin-top: -36px;margin-bottom: -1px;">
           <div class="col-md-6">
@@ -215,47 +217,47 @@
         </div>
 
       </div>
-    <!--- Footer -->
-    <footer>
-      <div class="container-fluid padding">
-        <div class="row text-center">
-          <div class="col-md-4">
-            <img src="img/logo.png">
-            <hr class="light">
-            <p>555-555-55555</p>
-            <p>gamecity@gmail.com</p>
-            <p>100 Nairobi</p>
-            <p>Ngong, Nairobi, 001000</p>
+      <!--- Footer -->
+      <footer>
+        <div class="container-fluid padding">
+          <div class="row text-center">
+            <div class="col-md-4">
+              <img src="img/logo.png">
+              <hr class="light">
+              <p>555-555-55555</p>
+              <p>gamecity@gmail.com</p>
+              <p>100 Nairobi</p>
+              <p>Ngong, Nairobi, 001000</p>
 
-          </div>
-          <div class="col-md-4">
-            <hr class="light">
-            <h5>Our Partners</h5>
-            <hr class="light">
-            <p>Google Playstore</p>
-            <p>Apple Appstore</p>
-            <p>Windows Phone Store</p>
+            </div>
+            <div class="col-md-4">
+              <hr class="light">
+              <h5>Our Partners</h5>
+              <hr class="light">
+              <p>Google Playstore</p>
+              <p>Apple Appstore</p>
+              <p>Windows Phone Store</p>
 
-          </div>
-          <div class="col-md-4">
-            <hr class="light">
-            <h5>Supported Platforms</h5>
-            <hr class="light">
-            <p>Android</p>
-            <p>iOS</p>
-            <p>Windows Phone</p>
-            <p>Blackberry</p>
+            </div>
+            <div class="col-md-4">
+              <hr class="light">
+              <h5>Supported Platforms</h5>
+              <hr class="light">
+              <p>Android</p>
+              <p>iOS</p>
+              <p>Windows Phone</p>
+              <p>Blackberry</p>
 
-          </div>
-          <div class="col-12">
-            <hr class="light-100">
-            <h5>&copy; Tonnymuchui</h5>
+            </div>
+            <div class="col-12">
+              <hr class="light-100">
+              <h5>&copy; Tonnymuchui</h5>
 
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
-  </div>
+      </footer>
+    </div>
 
 </body>
 
