--- a/game2.html
+++ b/game2.html
@@ -7,15 +7,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- <link rel="stylesheet" href="css/styles.css" -->
   <link rel="stylesheet" href="css/game2.css">
 
   <title>Harry Potter</title>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+    crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </head>
 <link href="https://fonts.googleapis.com/css?family=Nunito:300" rel="stylesheet">
@@ -26,16 +30,17 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-	<span class="navbar-toggler-icon"></span></button>
+        <span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a id="navtext" class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Games
-        </a>
+            <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Games
+            </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="game3.html">Angry Birds</a>
               <a class="dropdown-item" href="game2.html">Harry Potter</a>
@@ -66,36 +71,46 @@
     <div class="container" align="center">
 
       <h2 id="caps">A New Harry Potter Mobile Game<br>
-AVAILABLE NOW</h2>
+        AVAILABLE NOW</h2>
       <p align="center"><a href="https://itunes.apple.com/nz/app/harry-potter-hogwarts-mystery/id1333256716">
-        <img src="img/applestore.jpg" alt="download on apple store" align="center" ></a><a href="https://play.google.com/store/apps/details?id=com.tinyco.potter&referrer=adjust_reftag%3DcZSsvAzHp2tKu%26utm_source%3DWebsite%26utm_campaign%3DJam_City%26utm_content%3Dunknown%26utm_term%3Dandroid_icon"><img src="img/googleplaystore.jpg" alt="download on google play store" align="center"></a></p>
+          <img src="img/applestore.jpg" alt="download on apple store" align="center"></a><a href="https://play.google.com/store/apps/details?id=com.tinyco.potter&referrer=adjust_reftag%3DcZSsvAzHp2tKu%26utm_source%3DWebsite%26utm_campaign%3DJam_City%26utm_content%3Dunknown%26utm_term%3Dandroid_icon"><img
+            src="img/googleplaystore.jpg" alt="download on google play store" align="center"></a></p>
       <form method="POST" action="https://formspree.io/emdeechege@gmail.com">
         <p align="center"> Sign up here <input type="email" name="email" placeholder="Your email">
           <button type="submit">SUBMIT</button>
         </p>
       </form>
-      <p id="small" align="center">You've been invited to receive news and updates about the Harry Potter: Hogwarts Mystery mobile game up to and beyond the release.
+      <p id="small" align="center">You've been invited to receive news and updates about the Harry Potter: Hogwarts
+        Mystery mobile game up to and beyond the release.
       </p>
     </div>
     <div id="divider" class="row">
       <img src="img/line.jpg" alt=""></div>
     <div class="container">
-      <h2 id="caps"><p align="center">Trailer</h2></p>
-      <iframe width="1000" height="600" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center" id="frame"></iframe>
+      <h2 id="caps">
+        <p align="center">Trailer
+      </h2>
+      </p>
+      <iframe width="1000" height="600" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen align="center" id="frame"></iframe>
     </div>
     <div id="divider" class="row"><br>
       <img src="img/line.jpg" alt=""></div>
     <div class="container">
       <h3 id="aha" align="center">What Is </h3>
       <h2 id="aha" align="center" color="white">Harry Potter: Hogwarts Mystery?</h2><br>
-      <p align="center"> Harry Potter: Hogwarts Mystery is the first game in which players can create their own character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner Bros. Interactive Entertainment, the games label dedicated
-        to creating new Wizarding World mobile and video game experiences that place the player at the centre of their own adventure, inspired by J.K. Rowling’s original stories.</p>
+      <p align="center"> Harry Potter: Hogwarts Mystery is the first game in which players can create their own
+        character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner
+        Bros. Interactive Entertainment, the games label dedicated
+        to creating new Wizarding World mobile and video game experiences that place the player at the centre of their
+        own adventure, inspired by J.K. Rowling’s original stories.</p>
     </div>
     <div id="divider" class="row">
       <img src="img/line.jpg" alt=""></div>
     <div id="divis" class="row">
       <p align="center">
-        <h2 id="try">Game Features</h2></p>
+        <h2 id="try">Game Features</h2>
+      </p>
     </div>
     <div class="container">
       <div class="row" id="divi">
@@ -104,8 +119,11 @@ AVAILABLE NOW</h2>
         </div>
         <div class="col-md-7">
           <p>
-            <h3 id="try">Live your Hogwarts Experience</h3>Get ready to begin your Hogwarts story where you will be able to attend Hogwarts School of Witchcraft and Wizardry! Progress as a student through all seven years at Hogwarts, and learn to master everything from flying, Transfiguration, potion
-            brewing and more!</p>
+            <h3 id="try">Live your Hogwarts Experience</h3>Get ready to begin your Hogwarts story where you will be
+            able to attend Hogwarts School of Witchcraft and Wizardry! Progress as a student through all seven years at
+            Hogwarts, and learn to master everything from flying, Transfiguration, potion
+            brewing and more!
+          </p>
         </div>
       </div>
     </div>
@@ -113,7 +131,10 @@ AVAILABLE NOW</h2>
       <div class="row" id="divi">
         <div class="col-md-7">
           <p>
-            <h3 id="try">Customize Your Character</h3> Create your own in-game character as a Hogwarts student with our avatar creator! From hairstyle to casual outfits worn outside classes, you can customize the details of your character.</p>
+            <h3 id="try">Customize Your Character</h3> Create your own in-game character as a Hogwarts student with our
+            avatar creator! From hairstyle to casual outfits worn outside classes, you can customize the details of
+            your character.
+          </p>
         </div>
         <div class="col-md-5">
           <img src="img/owned.jpg" alt="hogwarts school" id="blur">
@@ -127,7 +148,10 @@ AVAILABLE NOW</h2>
         </div>
         <div class="col-md-7">
           <p>
-            <h3 id="try">Choose Your Hogwarts House</h3> Are you a brave Gryffindor, an ambitious Slytherin, a witty Ravenclaw, or a loyal Hufflepuff? In Harry Potter: Hogwarts Mystery, you will be able to select the house you feel you most identify with.</p>
+            <h3 id="try">Choose Your Hogwarts House</h3> Are you a brave Gryffindor, an ambitious Slytherin, a witty
+            Ravenclaw, or a loyal Hufflepuff? In Harry Potter: Hogwarts Mystery, you will be able to select the house
+            you feel you most identify with.
+          </p>
         </div>
       </div>
     </div>
@@ -135,7 +159,9 @@ AVAILABLE NOW</h2>
       <div class="row" id="divi">
         <div class="col-md-8">
           <p>
-            <h3 id="try">Learn New Spells & Potions</h3> Attend classes at Hogwarts and learn to cast spells, brew potions and more! Brew potions under Professor Snape’s critical eye, master Transfiguration with Professor McGonagall, and learn Charms from the esteemed Professor Flitwick. This is
+            <h3 id="try">Learn New Spells & Potions</h3> Attend classes at Hogwarts and learn to cast spells, brew
+            potions and more! Brew potions under Professor Snape’s critical eye, master Transfiguration with Professor
+            McGonagall, and learn Charms from the esteemed Professor Flitwick. This is
             your chance to finally become the witch or wizard you aspire to be!
           </p>
         </div>
@@ -163,7 +189,10 @@ AVAILABLE NOW</h2>
         </div>
         <div class="col-md-7">
           <p>
-            <h3 id="try">Create Lasting Friendships</h3> Throughout your journey at Hogwarts, you will meet many new and familiar faces, such as Bill Weasley and Nymphadora Tonks. Bond with your housemates and fellow students, compete for the House Cup, and go on exciting quests and adventures!</p>
+            <h3 id="try">Create Lasting Friendships</h3> Throughout your journey at Hogwarts, you will meet many new
+            and familiar faces, such as Bill Weasley and Nymphadora Tonks. Bond with your housemates and fellow
+            students, compete for the House Cup, and go on exciting quests and adventures!
+          </p>
         </div>
       </div>
     </div>
@@ -171,10 +200,19 @@ AVAILABLE NOW</h2>
       <img src="img/line.jpg" alt=""></div>
 
     <p id="caps" align="center">
-      <h3><p id="caps" align="center">Want More Content On</h3>
-      <h2><p id="caps" align="center"><strong>Harry Potter: Hogwarts Mystery?<strong></h2>
-      <h3><p id="caps" align="center">Follow us on:</h3></p>
-    <p id="fret" align="center"><a href="https://www.facebook.com/HPHogwartsMystery" class="fa fa-facebook"></a> <a href="https://twitter.com/HogwartsMystery" class="fa fa-twitter"></a> <a href="https://www.instagram.com/HPHogwartsMystery/" class="fa fa-instagram"></a>
+      <h3>
+        <p id="caps" align="center">Want More Content On
+      </h3>
+      <h2>
+        <p id="caps" align="center"><strong>Harry Potter: Hogwarts Mystery?<strong>
+      </h2>
+      <h3>
+        <p id="caps" align="center">Follow us on:
+      </h3>
+    </p>
+    <p id="fret" align="center"><a href="https://www.facebook.com/HPHogwartsMystery" class="fa fa-facebook"></a> <a
+        href="https://twitter.com/HogwartsMystery" class="fa fa-twitter"></a> <a href="https://www.instagram.com/HPHogwartsMystery/"
+        class="fa fa-instagram"></a>
     </p>
 
     <div class="row" id="row-1">
@@ -183,8 +221,12 @@ AVAILABLE NOW</h2>
       <div class="col-md-8">
         <p align="center" id="small">* By entering my email address I agree to the Terms of Service and Privacy Policy.</p>
         <p align="center" id="bolder">
-          HARRY POTTER: HOGWARTS MYSTERY software © 2018 Jam City, Inc. Developed by Jam City. Jam City® and the Jam City Logo are registered and/or unregistered trademarks of Jam City, Inc. WIZARDING WORLD, HARRY POTTER and FANTASTIC BEASTS Publishing Rights ©
-          J.K. Rowling. PORTKEY GAMES, HARRY POTTER: HOGWARTS MYSTERY, WIZARDING WORLD, HARRY POTTER and FANTASTIC BEASTS characters, names and related indicia © and ™ Warner Bros. Entertainment Inc. All Rights Reserved. WBIE LOGO, WB SHIELD:™ & © Warner
+          HARRY POTTER: HOGWARTS MYSTERY software © 2018 Jam City, Inc. Developed by Jam City. Jam City® and the Jam
+          City Logo are registered and/or unregistered trademarks of Jam City, Inc. WIZARDING WORLD, HARRY POTTER and
+          FANTASTIC BEASTS Publishing Rights ©
+          J.K. Rowling. PORTKEY GAMES, HARRY POTTER: HOGWARTS MYSTERY, WIZARDING WORLD, HARRY POTTER and FANTASTIC
+          BEASTS characters, names and related indicia © and ™ Warner Bros. Entertainment Inc. All Rights Reserved.
+          WBIE LOGO, WB SHIELD:™ & © Warner
           Bros. Entertainment Inc.</p>
       </div>
       <div class="col-md-1"><img src="img/wb.jpg" alt=""></im>
