--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Game Landing Page</title>
 	<link rel="icon" href="img/title.png" type="image/x-icon">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
+	 crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	 crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	 crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+	 crossorigin="anonymous"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<script src="js/scripts.js" type="text/javascript">
 	</script>
@@ -24,17 +28,18 @@
 		<div class="container-fluid">
 			<a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-	<span class="navbar-toggler-icon"></span>
-</button>
+				<span class="navbar-toggler-icon"></span>
+			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
 						<a id="navtext" class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Games
-        </a>
+						<a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+						 aria-haspopup="true" aria-expanded="false">
+							Games
+						</a>
 						<div class="dropdown-menu names" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="game3.html">Angry Birds</a>
 							<a class="dropdown-item" href="game2.html">Harry Potter</a>
@@ -78,13 +83,13 @@
 		<div class="carousel-inner" role="listbox">
 			<div class="carousel-item active">
 				<a href="game3.html">
-	      <img class="d-block img-fluid" src="img/carousel/abbanner.png" alt="First slide" style="width:100%;">
-			</a>
+					<img class="d-block img-fluid" src="img/carousel/abbanner.png" alt="First slide" style="width:100%;">
+				</a>
 
 			</div>
 			<div class="carousel-item">
 				<a href="game1.html">
-				<img class="d-block img-fluid" src="img/carousel/bannerfifa.jpg" alt="Second slide" style="width:100%;">
+					<img class="d-block img-fluid" src="img/carousel/bannerfifa.jpg" alt="Second slide" style="width:100%;">
 				</a>
 			</div>
 			<div class="carousel-item">
@@ -101,212 +106,203 @@
 			</div>
 			<div class="carousel-item">
 				<a href="game2.html">
-				<img class="d-block img-fluid" src="img/carousel/bannerhp.png" alt="Third slide" style="width:100%;">
+					<img class="d-block img-fluid" src="img/carousel/bannerhp.png" alt="Third slide" style="width:100%;">
 			</div>
 		</div>
 		<a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
-	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	    <span class="sr-only">Previous</span>
-	  </a>
-				<a class="carousel-control-next" href="#slides" role="button" data-slide="next">
-	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	    <span class="sr-only">Next</span>
-	  </a>
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+
+	<!--- Jumbotron Games Header -->
+	<hr class="light">
+	<h1 id="heading1" style="color:white;">GAMES</h1>
+	<hr class="light">
+
+
+	<!--- Three Column Section Games  -->
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<a href="game3.html"><img src="img/icons/ab.png"></a>
+				<h3>Angry Birds</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<a href="game1.html"><img src="img/icons/fifa.png"></a>
+				<h3>Fifa</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<a href="game2.html"><img src="img/icons/hp.png"></a>
+				<h3>Harry Potter</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/2k.png">
+				<h3>NBA 2k18</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/word.png">
+				<h3>Word Cross</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/cc.png">
+				<h3>Candy Crush</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/cr.png">
+				<h3>Clash Royale</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/sub.png">
+				<h3>Subway Surfers</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/pool.png">
+				<h3>8 Ball Pool</h3>
+			</div>
+		</div>
+		<hr class="my-4">
+
+	</div>
+
+	<hr class="light">
+	<h1 id="heading1" style="color:white;">UPCOMING GAMES</h1>
+	<hr class="light">
+
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/shooter.png">
+				<h3>Shooter</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/sniper.png">
+				<h3>Sniper</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/cs.png">
+				<h3>Candy Sweet</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/bike.png">
+				<h3>Bike Racing</h3>
 			</div>
 
-			<!--- Jumbotron Games Header -->
-			<hr class="light">
-			<h1 id="heading1" style="color:white;">GAMES</h1>
-			<hr class="light">
+		</div>
+		<hr class="my-4">
+	</div>
 
+	<!--- Two Column Section User feeback -->
+	<div id="support" class="row feedback">
 
-			<!--- Three Column Section Games  -->
-			<div class="container-fluid padding">
-				<div class="row text-center padding">
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<a href="game3.html"><img src="img/icons/ab.png"></a>
-						<h3>Angry Birds</h3>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<a href="game1.html"><img src="img/icons/fifa.png"></a>
-						<h3>Fifa</h3>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<a href="game2.html"><img src="img/icons/hp.png"></a>
-						<h3>Harry Potter</h3>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/icons/2k.png">
-						<h3>NBA 2k18</h3>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/icons/word.png">
-						<h3>Word Cross</h3>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/icons/cc.png">
-						<h3>Candy Crush</h3>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/icons/cr.png">
-						<h3>Clash Royale</h3>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/icons/sub.png">
-						<h3>Subway Surfers</h3>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/icons/pool.png">
-						<h3>8 Ball Pool</h3>
-					</div>
-				</div>
-				<hr class="my-4">
+		<div class="col-md-6">
+			<div class="jumbotron">
+				<h2>Report a problem</h2>
 
-			</div>
-
-			<hr class="light">
-			<h1 id="heading1" style="color:white;">UPCOMING GAMES</h1>
-			<hr class="light">
-
-			<div class="container-fluid padding">
-				<div class="row text-center padding">
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/icons/shooter.png">
-						<h3>Shooter</h3>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/icons/sniper.png">
-						<h3>Sniper</h3>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/icons/cs.png">
-						<h3>Candy Sweet</h3>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<img src="img/icons/bike.png">
-						<h3>Bike Racing</h3>
-					</div>
-
-				</div>
-				<hr class="my-4">
-			</div>
-
-			<!--- Two Column Section User feeback -->
-			<div id="support" class="row feedback">
-
-				<div class="col-md-6">
-					<div class="jumbotron">
-						<h2>Report a problem</h2>
-						<!-- <form id="complaint" method="POST" action="https://formspree.io/tonykanyingah@gmail.com">
-							<div class="form-group">
-								<label for="Your Name">Your Name</label>
-								<input style="width:60%;" type="text" class="form-control" id="name" placeholder="Name">
-								<label for="Email">Email</label>
-								<input style="width:60%;" type="text" class="form-control" id="email" placeholder="Your Email">
-								<label for="Email">Message</label>
-								<input style="width:60%;" type="text" class="form-control" id="message" placeholder="Game name & issue">
-							</div>
-							<button id="submit" type="submit" class="btn btn-success">Submit</button>
-						</form> -->
-						<form id="complaint" class="form" method="POST" action="https://formspree.io/cherucole94@gmail.com">
-							<div class="form-group">
-								<label for=".form-control">Email</label>
-								<input style="width:60%;" type="email" class="form-control" name="_replyto" placeholder="Email Address" required />
-								<label for="fname">Your Name</label>
-								<input style="width:60%;" class="form-control" type="text" id="fname" name="firstname" placeholder="Your name..">
-								<label for="subject">Subject</label>
-								<textarea style="width:60%;" id="subject" class="form-control" name="subject" placeholder="Write something.."></textarea>
-								<br>
-								<input class="btn btn-success" type="submit" value="Submit">
-							</div>
-						</form>
-					</div>
-				</div>
-
-
-				<div class="col-md-6">
-					<div id="jumboFeedback" class="jumbotron">
-						<h2>Subscribe for new games</h2>
-						<form id="subscribe" method="POST" action="https://formspree.io/cherucole94@gmail.com">
-							<div class="form-group">
-								<label for="Your Name">Your Email</label>
-								<input style="width:60%;" type="text" class="form-control" id="emailSub" placeholder="Your Email">
-
-							</div>
-							<button type="submit" class="btn btn-danger">Subscribe</button>
-						</form>
+				<form id="complaint" class="form" method="POST" action="https://formspree.io/cherucole94@gmail.com">
+					<div class="form-group">
+						<label for=".form-control">Email</label>
+						<input style="width:60%;" type="email" class="form-control" name="_replyto" placeholder="Email Address" required />
+						<label for="fname">Your Name</label>
+						<input style="width:60%;" class="form-control" type="text" id="fname" name="firstname" placeholder="Your name..">
+						<label for="subject">Subject</label>
+						<textarea style="width:60%;" id="subject" class="form-control" name="subject" placeholder="Write something.."></textarea>
 						<br>
-						<iframe style="height:10%;" src="https://giphy.com/embed/3oz8xPjPPvOwrGjip2" width="280" height="270" frameBorder="0" class="giphy-embed" allowFullScreen margin="0"></iframe>
+						<input class="btn btn-success" type="submit" value="Submit">
 					</div>
+				</form>
+			</div>
+		</div>
 
-				</div>
+
+		<div class="col-md-6">
+			<div id="jumboFeedback" class="jumbotron">
+				<h2>Subscribe for new games</h2>
+				<form id="subscribe" method="POST" action="https://formspree.io/cherucole94@gmail.com">
+					<div class="form-group">
+						<label for="Your Name">Your Email</label>
+						<input style="width:60%;" type="text" class="form-control" id="emailSub" placeholder="Your Email">
+
+					</div>
+					<button type="submit" class="btn btn-danger">Subscribe</button>
+				</form>
+				<br>
+				<iframe style="height:10%;" src="https://giphy.com/embed/3oz8xPjPPvOwrGjip2" width="280" height="270" frameBorder="0"
+				 class="giphy-embed" allowFullScreen margin="0"></iframe>
+			</div>
+
+		</div>
+
+
+	</div>
+
+
+	<!--- Connect -->
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-12">
+				<h3>Connect with us</h3>
+			</div>
+			<div class="col-12 social padding">
+				<hr class="light">
+				<a href="#"><i class="fab fa-facebook"></i></a>
+				<a href="https://twitter.com/cherucole"><i class="fab fa-twitter"></i></a>
+				<a href="#"><i class="fab fa-google-plus-g"></i></a>
+				<a href="#"><i class="fab fa-instagram"></i></a>
+				<a href="#"><i class="fab fa-youtube"></i></a>
+				<hr class="light">
 
 
 			</div>
+		</div>
 
+	</div>
 
-			<!--- Connect -->
-			<div class="container-fluid padding">
-				<div class="row text-center padding">
-					<div class="col-12">
-						<h3>Connect with us</h3>
-					</div>
-					<div class="col-12 social padding">
-						<hr class="light">
-						<a href="#"><i class="fab fa-facebook"></i></a>
-						<a href="https://twitter.com/cherucole"><i class="fab fa-twitter"></i></a>
-						<a href="#"><i class="fab fa-google-plus-g"></i></a>
-						<a href="#"><i class="fab fa-instagram"></i></a>
-						<a href="#"><i class="fab fa-youtube"></i></a>
-						<hr class="light">
+	<!--- Footer -->
+	<footer>
+		<div class="container-fluid padding">
+			<div class="row text-center">
+				<div class="col-md-4">
+					<img src="img/logo.png">
+					<hr class="light">
+					<p>555-555-55555</p>
+					<p>gamecity@gmail.com</p>
+					<p>100 Nairobi</p>
+					<p>Ngong, Nairobi, 001000</p>
 
-
-					</div>
 				</div>
+				<div class="col-md-4">
+					<hr class="light">
+					<h5>Our Partners</h5>
+					<hr class="light">
+					<p>Google Playstore</p>
+					<p>Apple Appstore</p>
+					<p>Windows Phone Store</p>
 
+				</div>
+				<div class="col-md-4">
+					<hr class="light">
+					<h5>Supported Platforms</h5>
+					<hr class="light">
+					<p>Android</p>
+					<p>iOS</p>
+					<p>Windows Phone</p>
+					<p>Blackberry</p>
+
+				</div>
+				<div class="col-12">
+					<hr class="light-100">
+					<h5>&copy; cherucole</h5>
+
+				</div>
 			</div>
 
-			<!--- Footer -->
-			<footer>
-				<div class="container-fluid padding">
-					<div class="row text-center">
-						<div class="col-md-4">
-							<img src="img/logo.png">
-							<hr class="light">
-							<p>555-555-55555</p>
-							<p>gamecity@gmail.com</p>
-							<p>100 Nairobi</p>
-							<p>Ngong, Nairobi, 001000</p>
-
-						</div>
-						<div class="col-md-4">
-							<hr class="light">
-							<h5>Our Partners</h5>
-							<hr class="light">
-							<p>Google Playstore</p>
-							<p>Apple Appstore</p>
-							<p>Windows Phone Store</p>
-
-						</div>
-						<div class="col-md-4">
-							<hr class="light">
-							<h5>Supported Platforms</h5>
-							<hr class="light">
-							<p>Android</p>
-							<p>iOS</p>
-							<p>Windows Phone</p>
-							<p>Blackberry</p>
-
-						</div>
-						<div class="col-12">
-							<hr class="light-100">
-							<h5>&copy; cherucole</h5>
-
-						</div>
-					</div>
-
-				</div>
-			</footer>
+		</div>
+	</footer>
 
 </body>
 
