--- a/game3.html
+++ b/game3.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
+    crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/game3.css">
@@ -15,50 +16,53 @@
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-md navbar-light  fixed-top">
-		<div class="container-fluid">
-	<a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
-  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-	<span class="navbar-toggler-icon"></span></button>
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a id="navtext" class="nav-link" href="index.html">Home</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Games
-        </a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="game3.html">Angry Birds</a>
-							<a class="dropdown-item" href="game2.html">Harry Potter</a>
-							<a class="dropdown-item" href="game1.html">Fifa 18</a>
-							<a class="dropdown-item" href="#">Word Cross</a>
-							<a class="dropdown-item" href="#">Subway Surfers</a>
-							<a class="dropdown-item" href="#">Clash Royale</a>
-							<a class="dropdown-item" href="#">Nba2K18</a>
-							<a class="dropdown-item" href="#">8 Ball Pool</a>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+        <span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a id="navtext" class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Games
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="game3.html">Angry Birds</a>
+              <a class="dropdown-item" href="game2.html">Harry Potter</a>
+              <a class="dropdown-item" href="game1.html">Fifa 18</a>
+              <a class="dropdown-item" href="#">Word Cross</a>
+              <a class="dropdown-item" href="#">Subway Surfers</a>
+              <a class="dropdown-item" href="#">Clash Royale</a>
+              <a class="dropdown-item" href="#">Nba2K18</a>
+              <a class="dropdown-item" href="#">8 Ball Pool</a>
 
-						</div>
-					</li>
-					<li class="nav-item">
-						<a id="navtext" class="nav-link" href="about.html">About Us</a>
-					</li>
-					<li class="nav-item">
-						<a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
-					</li>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a id="navtext" class="nav-link" href="about.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
+          </li>
 
-				</ul>
+        </ul>
 
-			</div>
-		</div>
-	</nav>
+      </div>
+    </div>
+  </nav>
   <div class="top-image">
     <div class="container">
       <div class="row">
         <div class="col-md-6" id="top">
           <h1>Angry Birds 2</h1>
-          <p>Play the Biggest mobile game of all time. Topple towers and pop pigs in tons of multi-stage levels, and test your skills against other players to earn handsome rewards in the Arena.</p>
-          <a href="https://play.google.com/store/apps/details?id=com.rovio.baba" target="_blank"><img src="img/android.png" alt=""></a>
+          <p>Play the Biggest mobile game of all time. Topple towers and pop pigs in tons of multi-stage levels, and
+            test your skills against other players to earn handsome rewards in the Arena.</p>
+          <a href="https://play.google.com/store/apps/details?id=com.rovio.baba" target="_blank"><img src="img/android.png"
+              alt=""></a>
         </div>
         <div class="col-md-6">
           <img src="img/ab2_characters.png" alt="">
@@ -75,7 +79,9 @@
         </div>
         <div class="col-md-10 content">
           <h1>ANGRY BIRDS</h1>
-          <p>The survival of the Angry Birds is at stake. Dish out revenge on the greedy pigs who stole their eggs. Use the unique powers of each bird to destroy the pigs’ defenses. Angry Birds features challenging physics-based gameplay and hours of replay
+          <p>The survival of the Angry Birds is at stake. Dish out revenge on the greedy pigs who stole their eggs. Use
+            the unique powers of each bird to destroy the pigs’ defenses. Angry Birds features challenging
+            physics-based gameplay and hours of replay
             value. Each level requires logic, skill and force to solve.</p>
         </div>
       </div>
@@ -84,83 +90,88 @@
         <div class="col-md-12">
           <p>Download and Play Angry Bird for free today</p>
 
-          <a href="https://play.google.com/store/apps/details?id=com.rovio.baba" target="_blank"><img src="img/android.png" alt=""></a>
-          <a href="https://itunes.apple.com/us/app/ab-classic/id343200656?mt=8" target="_blank"><img src="img/app-store-logo.png" alt=""></a>
-          <a href="https://www.amazon.com/Rovio-Entertainment-Ltd-Angry-Birds/dp/B004SJ3BCI" target="_blank"><img src="img/amazon.png" alt=""></a>
-          <a href="https://www.amazon.com/Rovio-Entertainment-Ltd-Angry-Birds/dp/B004SJ3BCI" target="_blank"><img src="img/ms.png" alt=""></a>
+          <a href="https://play.google.com/store/apps/details?id=com.rovio.baba" target="_blank"><img src="img/android.png"
+              alt=""></a>
+          <a href="https://itunes.apple.com/us/app/ab-classic/id343200656?mt=8" target="_blank"><img src="img/app-store-logo.png"
+              alt=""></a>
+          <a href="https://www.amazon.com/Rovio-Entertainment-Ltd-Angry-Birds/dp/B004SJ3BCI" target="_blank"><img src="img/amazon.png"
+              alt=""></a>
+          <a href="https://www.amazon.com/Rovio-Entertainment-Ltd-Angry-Birds/dp/B004SJ3BCI" target="_blank"><img src="img/ms.png"
+              alt=""></a>
           <a href="https://crackberry.com/tag/angry-birds-blackberry" target="_blank"><img src="img/bb.png" alt=""></a>
 
         </div>
-        </div>
+      </div>
 
-<br>
-        <div class="row" id="samples">
-          <div class="col-md-9" style="margin:0 auto;">
-            <h3>GAME SCREENSHOTS</h3>
-            <div id="demo" class="carousel slide" data-ride="carousel">
+      <br>
+      <div class="row" id="samples">
+        <div class="col-md-9" style="margin:0 auto;">
+          <h3>GAME SCREENSHOTS</h3>
+          <div id="demo" class="carousel slide" data-ride="carousel">
 
-              <!-- Indicators -->
-              <ul class="carousel-indicators">
-                <li data-target="#demo" data-slide-to="0" class="active"></li>
-                <li data-target="#demo" data-slide-to="1"></li>
-                <li data-target="#demo" data-slide-to="2"></li>
-                <li data-target="#demo" data-slide-to="3"></li>
-                <li data-target="#demo" data-slide-to="4"></li>
-              </ul>
-
-              <!-- The slideshow -->
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="img/cs.jpg" alt="Los Angeles" style="height:500px; width:100%;">
-                </div>
-                <div class="carousel-item">
-                  <img src="img/sc2.jpg" alt="Chicago" style="height:500px;width:100%;">
-                </div>
-                <div class="carousel-item">
-                  <img src="img/cs4.png" alt="New York" style="height:500px;width:100%;">
-                </div>
-                <div class="carousel-item">
-                  <img src="img/sc1.png" alt="Los Angeles" style="height:500px; width:100%;">
-                </div>
-                <div class="carousel-item">
-                  <img src="img/cs4.jpg" alt="Los Angeles" style="height:500px; width:100%;">
-                </div>
-              </div>
-
-              <!-- Left and right controls -->
-              <a class="carousel-control-prev" href="#demo" data-slide="prev">
-<span class="carousel-control-prev-icon"></span>
-</a>
-              <a class="carousel-control-next" href="#demo" data-slide="next">
-<span class="carousel-control-next-icon"></span>
-</a>
-
-            </div>
-          </div>
-          <div class="col-md-3" style="padding-top:30px;">
-            <p>Published: 2017</p>
-            <p>Genre: Adventure</p>
-            <p>Developer: Game City</p>
-            <p>Platforms: iOS, Android, Windows Phone, Windows 8, Amazon</p>
-          </div>
-        </div>
-
-<br>
-        <div class="row" id="third-row">
-          <div class="col-md-5">
-            <h3>Features</h3>
-            <ul>
-              <li>Never-ending fun with dozens of unique levels</li>
-              <li>Fun and easy to learn, but a challenging game to master</li>
-              <li>Float your way through fantastical islands</li>
-              <li>Compatible for iPhone or Android!</li>
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+              <li data-target="#demo" data-slide-to="0" class="active"></li>
+              <li data-target="#demo" data-slide-to="1"></li>
+              <li data-target="#demo" data-slide-to="2"></li>
+              <li data-target="#demo" data-slide-to="3"></li>
+              <li data-target="#demo" data-slide-to="4"></li>
             </ul>
-          </div>
-          <div class="col-md-7 content">
-            <h3>ANGRY BIRDS 2 TRAILER</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/hqBT05dqmKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+            <!-- The slideshow -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/cs.jpg" alt="Los Angeles" style="height:500px; width:100%;">
+              </div>
+              <div class="carousel-item">
+                <img src="img/sc2.jpg" alt="Chicago" style="height:500px;width:100%;">
+              </div>
+              <div class="carousel-item">
+                <img src="img/cs4.png" alt="New York" style="height:500px;width:100%;">
+              </div>
+              <div class="carousel-item">
+                <img src="img/sc1.png" alt="Los Angeles" style="height:500px; width:100%;">
+              </div>
+              <div class="carousel-item">
+                <img src="img/cs4.jpg" alt="Los Angeles" style="height:500px; width:100%;">
+              </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </a>
+
           </div>
         </div>
+        <div class="col-md-3" style="padding-top:30px;">
+          <p>Published: 2017</p>
+          <p>Genre: Adventure</p>
+          <p>Developer: Game City</p>
+          <p>Platforms: iOS, Android, Windows Phone, Windows 8, Amazon</p>
+        </div>
+      </div>
+
+      <br>
+      <div class="row" id="third-row">
+        <div class="col-md-5">
+          <h3>Features</h3>
+          <ul>
+            <li>Never-ending fun with dozens of unique levels</li>
+            <li>Fun and easy to learn, but a challenging game to master</li>
+            <li>Float your way through fantastical islands</li>
+            <li>Compatible for iPhone or Android!</li>
+          </ul>
+        </div>
+        <div class="col-md-7 content">
+          <h3>ANGRY BIRDS 2 TRAILER</h3>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/hqBT05dqmKc" frameborder="0" allow="autoplay; encrypted-media"
+            allowfullscreen></iframe>
+        </div>
+      </div>
 
 
 
@@ -207,9 +218,12 @@
       </div>
     </footer>
     <script src="https://unpkg.com/ionicons@4.2.4/dist/ionicons.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+      crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
 </body>
 
