--- a/privacy.html
+++ b/privacy.html
@@ -7,10 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Game Landing Page</title>
 	<link rel="icon" href="img/title.png" type="image/x-icon">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
+	 crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	 crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	 crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+	 crossorigin="anonymous"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
@@ -22,29 +26,30 @@
 		<div class="container-fluid">
 			<a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-	<span class="navbar-toggler-icon"></span>
-</button>
+				<span class="navbar-toggler-icon"></span>
+			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
 						<a id="navtext" class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item dropdown">
-        <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Games
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="game3.html">Angry Birds</a>
-          <a class="dropdown-item" href="game2.html">Harry Potter</a>
-          <a class="dropdown-item" href="game1.html">Fifa 18</a>
-					<a class="dropdown-item" href="#">Word Cross</a>
-					<a class="dropdown-item" href="#">Subway Surfers</a>
-					<a class="dropdown-item" href="#">Clash Royale</a>
-					<a class="dropdown-item" href="#">Nba2K18</a>
-					<a class="dropdown-item" href="#">8 Ball Pool</a>
+						<a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+						 aria-haspopup="true" aria-expanded="false">
+							Games
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="game3.html">Angry Birds</a>
+							<a class="dropdown-item" href="game2.html">Harry Potter</a>
+							<a class="dropdown-item" href="game1.html">Fifa 18</a>
+							<a class="dropdown-item" href="#">Word Cross</a>
+							<a class="dropdown-item" href="#">Subway Surfers</a>
+							<a class="dropdown-item" href="#">Clash Royale</a>
+							<a class="dropdown-item" href="#">Nba2K18</a>
+							<a class="dropdown-item" href="#">8 Ball Pool</a>
 
-        </div>
-      </li>
+						</div>
+					</li>
 					<li class="nav-item">
 						<a id="navtext" class="nav-link" href="about.html">About Us</a>
 					</li>
@@ -71,67 +76,55 @@
 		<dipv class="row text-center padding">
 			<div class="col-md-12">
 				<h3>Effective as of May 25, 2018</h3>
-				<p style="color:white;">Our updated Privacy Policy explains what information we collect, how we use it, and the choices you have, including how to manage your privacy and cookies settings, access the information we have about you, and delete your account.
+				<p style="color:white;">Our updated Privacy Policy explains what information we collect, how we use it, and the
+					choices you have, including how to manage your privacy and cookies settings, access the information we have about
+					you, and delete your account.
 
-	We are committed to protecting consumer privacy online. We believe that greater protection of personal privacy on the Web will not only protect our users, but also increase users confidence and ultimately their participation in online activities. The purpose of our policy is to inform you about the types of information we gather about you when you visit our site, how we may use that information, whether we disclose it to anyone, and the choices you have regarding our use of the information. We strive to offer its visitors the many advantages of Internet technology and to provide an interactive and personalized experience.
-	</p>
-	<br>
-	<hr class="light">
+					We are committed to protecting consumer privacy online. We believe that greater protection of personal privacy on
+					the Web will not only protect our users, but also increase users confidence and ultimately their participation in
+					online activities. The purpose of our policy is to inform you about the types of information we gather about you
+					when you visit our site, how we may use that information, whether we disclose it to anyone, and the choices you
+					have regarding our use of the information. We strive to offer its visitors the many advantages of Internet
+					technology and to provide an interactive and personalized experience.
+				</p>
+				<br>
+				<hr class="light">
 
 				<h3>What information do we collect?</h3>
-<p style="color:white;">● if you register with us (such as your date of birth, username, avatar, password and email address);
-● information you provide by participating in any chats, communities or social media functions. We will consider that information as part of the public domain;
-● information you provide us if you report a problem with our Services or App.
-How do we use your information?<p>
-<h3>We may use your data in the following ways:</h3>
+				<p style="color:white;">● if you register with us (such as your date of birth, username, avatar, password and email
+					address);
+					● information you provide by participating in any chats, communities or social media functions. We will consider
+					that information as part of the public domain;
+					● information you provide us if you report a problem with our Services or App.
+					How do we use your information?<p>
+						<h3>We may use your data in the following ways:</h3>
 
-<p style="color:white;">To provide you the App and associated websites and continuously improve their features;
-<br>
-● To store your running-history;
-<br>
-● To provide helpdesk and support services;
-<br>
-● To customise the App which is available to you;
-<br>
-● To ensure that you are in compliance with our terms;
-<br>
-● To moderate any chat messages;<p>
+						<p style="color:white;">To provide you the App and associated websites and continuously improve their features;
+							<br>
+							● To store your running-history;
+							<br>
+							● To provide helpdesk and support services;
+							<br>
+							● To customise the App which is available to you;
+							<br>
+							● To ensure that you are in compliance with our terms;
+							<br>
+							● To moderate any chat messages;<p>
 
 			</div>
-		</div>
-		<hr class="my-4">
+	</div>
+	<hr class="my-4">
 
 	</div>
 
-		</div>
-		<hr class="my-4">
+	</div>
+	<hr class="my-4">
 	</div>
 
 	<!--- Two Column Section User feeback -->
 	<div id="support" class="row feedback">
 
-
-
-
-
-
-
 	</div>
-
-
-	<!--- Fixed background -->
-
-
-	<!--- Emoji Section -->
-
-
-	<!--- Meet the team -->
-
-
-	<!--- Cards -->
-
-
-	<!--- Two Column Section -->
 
 
 	<!--- Connect -->
